kubernetes/manifests/svc.mariadb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: lobsters-site
  labels:
    app: lobsters
    server: mariadb
spec:
  type: ClusterIP
  selector:
    server: mariadb
    app: lobsters
  ports:
  - name: mariadb
    protocol: TCP
    port: 3306
    targetPort: mariadb
